Correct spacing of the previous workshops section and resizing properties

--- a/styles/events.css
+++ b/styles/events.css
@@ -15,6 +15,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif; font-weight: 300;
 }
 
 .navbar {
@@ -179,7 +180,6 @@ h1 {
     box-shadow: 0px 3px 3px rgb(0 0 0 / 25%);
     border-radius: 15px;
     float: right;
-    overflow: hidden;
     cursor: pointer;
 }
 
@@ -203,6 +203,7 @@ h1 {
     text-align: center;
     margin: 80px 0 0;
 }
+
 .previous-workshops-section > h2 {
     font-size: 1.8rem;
     margin: 0 0 20px;
@@ -210,20 +211,28 @@ h1 {
 }
 
 .previous-workshops-container {
-    margin: 10px;
-    padding: 5%;
     display: flex;
+    align-items: center;
+    padding: 3%;
+}
+
+.previous-workshops-section-text {
+    flex: 2;
 }
 
 .previous-workshops-section-text > p {
-    width: 70%;
+    font-size: 24px;
+    text-align: left;
+    width: 80%;
     margin: auto;
-    padding: 35px 0 20px;
-    text-align: justify;
-    line-height: 1.5;
+    padding: 20px;
 }
 
-.previous-workshops-container > img {
+.previous-workshops-img-box {
+    flex: 1;
+}
+
+.previous-workshops-img-box > img {
     width: 255px;
 }
 
@@ -232,11 +241,10 @@ h1 {
     height: 35px;
     color: white;
     font-size: .8rem;
-    width: 20%;
+    width: 30%;
     background: #EE2B2A;
     border: #EE2B2A;
     border-radius: 15px;
-    overflow: hidden;
     filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.54));
 }
 
@@ -257,10 +265,7 @@ h1 {
   
   .column-left{ 
     float: left; 
-    /* width: 33.333%;  */
     width: 20%;
-    /* background-color: red; */
-    /* display: block; */
   }
   
   .column-left img {
@@ -270,7 +275,6 @@ h1 {
   
   .column-center{ 
     display: inline-block; 
-    /* width: 33.333%;  */
     width: 60%;
     text-align: center;
   }
@@ -283,23 +287,13 @@ h1 {
   
   .column-right{ 
     float: right; 
-    /* width: 33.333%;  */
     width: 20%;
     text-align: right;
-    /* background-color: red; */
   }
   
   .middleP2 {
     font-size: 10px;
-    /* background-color: blue; */
   }
-  
-  @media (max-width: 800px) {
-    .middleP2 {
-      font-size: 7px;
-    }
-  }
-  
 
 
 /* Media queries */
@@ -321,7 +315,7 @@ h1 {
     }
 
     .previous-workshops-section-text > a > button {
-        width: 35%;
+        width: 30%;
     }
 
     .previous-workshops-container {
@@ -338,14 +332,29 @@ h1 {
 
 /* Medium Screens */
 @media(max-width: 515px){
+    .previous-workshops-section-text {
+        font-size: 20px;
+    }
+
     .event-link > a > button {
         width: 35%;
     }
-    
-    .footer-container
 
-    .footer-img {
-        width: 80px;
+    .previous-workshops-section-text > p {
+        font-size: 20px;
+        width: 100%;
+    }
+    .previous-workshops-section-text > a > button {
+        width: 40%;
+    }
+    
+}
+
+
+/* Footer Specific */
+@media (max-width: 800px) {
+    .middleP2 {
+      font-size: 7px;
     }
 }
 
